--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 			"@php -r \"unlink('README.md');\"",
 			"@php -r \"rename('composer.json.default', 'composer.json');\"",
 			"@composer dump-autoload -o",
-            "@npm i",
+            "npm install",
 			"@php craft setup/welcome"
 		]
 	}
