--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-loader": "^2.1.1",
         "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-vue": "^4.7.1",
         "laravel-mix": "^2.1.14",
         "laravel-mix-stylelint": "^0.2.0",
         "node-sass-json-importer": "^4.1.0",
@@ -33,7 +32,6 @@
         "stylelint-webpack-plugin": "^0.10.5"
     },
     "dependencies": {
-        "normalize.css": "^8.0.1",
-        "vue": "^2.6.6"
+        "normalize.css": "^8.0.1"
     }
 }
