🏗 (build): migrate project to brightpack

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
 ENVIRONMENT="dev"
 
+APP_HOST="yourapp.test"
+APP_URL="http://${APP_HOST}"
+
 # The secure key Craft will use for hashing and encrypting data
 SECURITY_KEY=""
 
