--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,7 @@
 /vendor
 .DS_Store
 /node_modules
-/web/**
-!/web/index.php
-!/web/.htaccess
-!/web/web.config
+/web/cpresources
 /storage/**
 !/storage/.gitkeep
 /config/license.key
