--- a/package.json
+++ b/package.json
@@ -1,37 +1,19 @@
 {
-    "name": "ms-craft",
-    "version": "1.0.0",
-    "description": "",
-    "main": "webpack.mix.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "build": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "build:prod": "cross-env DEPLOY_ENV=production npm run build"
+        "dev": "webpack --mode=development",
+        "build": "webpack --mode=production"
     },
-    "author": "",
-    "license": "ISC",
     "devDependencies": {
-        "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
-        "babel-eslint": "^10.0.1",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "browser-sync": "^2.26.3",
-        "browser-sync-webpack-plugin": "^2.2.2",
-        "cross-env": "^5.2.0",
-        "eslint": "^5.9.0",
-        "eslint-config-airbnb-base": "^13.1.0",
-        "eslint-loader": "^2.1.1",
-        "eslint-plugin-import": "^2.14.0",
-        "laravel-mix": "^2.1.14",
-        "laravel-mix-stylelint": "^0.2.0",
-        "node-sass-json-importer": "^4.1.0",
-        "stylelint": "^9.10.1",
-        "stylelint-config-recommended-scss": "^3.2.0",
-        "stylelint-scss": "^3.5.3",
-        "stylelint-webpack-plugin": "^0.10.5"
+        "brightpack": "ssh://git@github.com:corneliusio/brightpack.git#4.3.0",
+        "color": "^3.1.2",
+        "eslint": "^7.2.0",
+        "eslint-config-airbnb-base": "^14.2.0",
+        "eslint-plugin-html": "^6.0.2",
+        "eslint-plugin-svelte3": "^2.7.3",
+        "eslint-plugin-vue": "^6.2.2",
+        "tailwindcss": "^1.4.6"
     },
     "dependencies": {
-        "normalize.css": "^8.0.1"
+
     }
 }
