--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,34 @@
-# The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
 ENVIRONMENT="dev"
+SECURITY_KEY=""
 
 APP_HOST="yourapp.test"
 APP_URL="http://${APP_HOST}"
+DEFAULT_SITE_URL=${APP_URL}
 
-# The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY=""
-
-# The database driver that will be used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
-
-# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
 DB_SERVER="localhost"
-
-# The database username to connect with
 DB_USER="root"
-
-# The database password to connect with
 DB_PASSWORD=""
-
-# The name of the database to select
 DB_DATABASE=""
-
-# The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
-
-# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
 DB_TABLE_PREFIX=""
-
-# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
+
+AWS_DEFAULT_REGION="us-east-1"
+AWS_S3_ACCESS_KEY_ID=""
+AWS_S3_SECRET_ACCESS_KEY=""
+AWS_S3_BUCKET=""
+
+CLOUDFRONT_URL=""
+CLOUDFRONT_DISTRIBUTION_ID=""
+
+SYSTEM_EMAIL_ADDRESS=""
+SENGRID_API_KEY=""
+
+STRIPE_PUBLIC=""
+STRIPE_SECRET=""
+
+MAILCHIMP_API_KEY=""
+MAILCHIMP_AUDIENCE_ID=""
+
+MARKERIO_DESTINATION=""
