--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-.env
-.idea
-.vscode
-.cache
+/.env
+/.idea
+/.vscode
+/.cache
 /vendor
-.DS_Store
+/.DS_Store
 /node_modules
 /web/cpresources
 /web/assets
 /storage/**
+!/storage/rebrand
 !/storage/.gitkeep
 /config/license.key
+/package-lock.json
+/yarn.lock
