🚧 update typo, readme, and add sendgrid by default

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ CLOUDFRONT_URL=""
 CLOUDFRONT_DISTRIBUTION_ID=""
 
 SYSTEM_EMAIL_ADDRESS=""
-SENGRID_API_KEY=""
+SENDGRID_API_KEY=""
 
 STRIPE_PUBLIC=""
 STRIPE_SECRET=""
