🔧 change default url variable

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECURITY_KEY=""
 
 APP_HOST="yourapp.test"
 APP_URL="http://${APP_HOST}"
-DEFAULT_SITE_URL=${APP_URL}
+PRIMARY_SITE_URL=${APP_URL}
 
 DB_DRIVER="mysql"
 DB_SERVER="localhost"
