--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
         "bootstrap": "bootstrap/script.sh"
     },
     "devDependencies": {
-        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#4.5.3",
+        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#4.7.0",
         "color": "^3.1.2",
         "eslint": "^7.2.0",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-html": "^6.0.2",
         "eslint-plugin-svelte3": "^2.7.3",
-        "eslint-plugin-vue": "^6.2.2",
-        "tailwindcss": "^1.9.0"
+        "eslint-plugin-vue": "^6.2.2"
     }
 }
