🔧 add default .env vars

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECURITY_KEY=""
 
 APP_HOST="yourapp.test"
 APP_URL="http://${APP_HOST}"
-PRIMARY_SITE_URL=${APP_URL}
+PRIMARY_SITE_URL="${APP_URL}"
 
 DB_DRIVER="mysql"
 DB_SERVER="localhost"
@@ -22,6 +22,10 @@ AWS_S3_BUCKET=""
 CLOUDFRONT_URL=""
 CLOUDFRONT_DISTRIBUTION_ID=""
 
+IMGIX_HOST=""
+IMGIX_URL="https://${IMGIX_HOST}"
+IMGIX_API_KEY=""
+
 SYSTEM_EMAIL_ADDRESS=""
 SENDGRID_API_KEY=""
 
@@ -30,5 +34,8 @@ STRIPE_SECRET=""
 
 MAILCHIMP_API_KEY=""
 MAILCHIMP_AUDIENCE_ID=""
+
+RECAPTCHA_SITE_KEY=""
+RECAPTCHA_SECRET_KEY=""
 
 MARKERIO_DESTINATION=""
