--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
     "scripts": {
         "dev": "webpack --mode=development",
         "build": "webpack --mode=production",
-        "bootstrap": "bootstrap/script.sh"
+        "bootstrap": "bootstrap/script.sh",
+        "test": "uvu tests"
     },
     "devDependencies": {
+        "@axe-core/webdriverjs": "^4.1.1",
         "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#4.7.0",
+        "chalk": "^4.1.1",
         "color": "^3.1.2",
         "eslint": "^7.2.0",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-html": "^6.0.2",
         "eslint-plugin-svelte3": "^2.7.3",
-        "eslint-plugin-vue": "^6.2.2"
+        "eslint-plugin-vue": "^6.2.2",
+        "selenium-webdriver": "^4.0.0-beta.3",
+        "uvu": "^0.5.1"
     }
 }
