--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "scripts": {
-        "dev": "webpack --mode=development",
+        "dev": "webpack --mode=development --watch",
         "build": "webpack --mode=production",
         "bootstrap": "bootstrap/script.sh",
         "test": "uvu tests"
     },
     "devDependencies": {
         "@axe-core/webdriverjs": "^4.1.1",
-        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#4.7.0",
+        "autoprefixer": "^10.2.5",
+        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#next",
         "chalk": "^4.1.1",
         "color": "^3.1.2",
         "eslint": "^7.2.0",
@@ -15,7 +16,13 @@
         "eslint-plugin-html": "^6.0.2",
         "eslint-plugin-svelte3": "^2.7.3",
         "eslint-plugin-vue": "^6.2.2",
+        "postcss": "^8.2.13",
+        "postcss-functions": "^4.0.2",
+        "postcss-import": "^14.0.1",
+        "postcss-loader": "^5.2.0",
+        "postcss-preset-env": "^6.7.0",
         "selenium-webdriver": "^4.0.0-beta.3",
+        "tailwindcss": "^2.1.2",
         "uvu": "^0.5.1"
     }
 }
