🐛 fix composer deps and other minor adjustments

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 ENVIRONMENT="dev"
 SECURITY_KEY=""
+APP_ID=""
 
 APP_HOST="yourapp.test"
 APP_URL="http://${APP_HOST}"
 PRIMARY_SITE_URL="${APP_URL}"
+PRIMARY_SITE_NAME="MS Craft"
 
 DB_DRIVER="mysql"
 DB_SERVER="localhost"
@@ -26,6 +28,7 @@ IMGIX_HOST=""
 IMGIX_URL="https://${IMGIX_HOST}"
 IMGIX_API_KEY=""
 
+SYSTEM_EMAIL_NAME="MS Craft"
 SYSTEM_EMAIL_ADDRESS=""
 SENDGRID_API_KEY=""
 
@@ -39,3 +42,5 @@ RECAPTCHA_SITE_KEY=""
 RECAPTCHA_SECRET_KEY=""
 
 MARKERIO_DESTINATION=""
+
+SENTRY_DSN=""
