--- a/.env.example
+++ b/.env.example
@@ -42,8 +42,8 @@ AWS_S3_ACCESS_KEY_ID=""
 AWS_S3_SECRET_ACCESS_KEY=""
 AWS_S3_BUCKET=""
 
-# CLOUDFRONT_URL=""
-# CLOUDFRONT_DISTRIBUTION_ID=""
+CLOUDFRONT_URL=""
+CLOUDFRONT_DISTRIBUTION_ID=""
 
 ################################################
 # IMGIX Settings (if used)
@@ -79,6 +79,6 @@ SENDGRID_API_KEY=""
 # Mostly Serious QA and Support
 ################################################
 
-# MARKERIO_DESTINATION=""
-# SENTRY_DSN=""
+MARKERIO_DESTINATION=""
+SENTRY_DSN=""
 
