--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "vlucas/phpdotenv": "^2.4.0",
         "superbig/craft3-imgix": "2.0.5",
         "verbb/super-table": "2.6.5",
-        "percipioglobal/craft-colour-swatches": "1.4.1.1",
-        "mikestecker/craft-videoembedder": "1.1.4"
+        "percipioglobal/craft-colour-swatches": "1.4.1.1"
     },
     "autoload": {
         "psr-4": {
@@ -26,10 +25,8 @@
         }
     },
     "config": {
-        "optimize-autoloader": true,
-        "platform": {
-            "php": "7.4"
-        }
+        "sort-packages": true,
+        "optimize-autoloader": true
     },
     "scripts": {
         "post-create-project-cmd": [
