--- a/composer.json
+++ b/composer.json
@@ -3,21 +3,21 @@
     "description": "Craft CMS",
     "type": "project",
     "require": {
-        "craftcms/cms": "3.5.17.1",
-        "craftcms/redactor": "2.8.5",
-        "craftcms/aws-s3": "1.2.11",
-        "hillholliday/craft-user-manual": "2.0.5",
-        "nystudio107/craft-seomatic": "3.3.29",
-        "sebastianlenz/linkfield": "1.0.24",
-        "spicyweb/craft-neo": "2.8.16",
-        "verbb/icon-picker": "1.1.10",
-        "verbb/smith": "1.1.10",
-        "putyourlightson/craft-sendgrid": "1.2.2",
-        "fortrabbit/craft-copy": "1.0.2",
-        "vlucas/phpdotenv": "^2.4.0",
-        "superbig/craft3-imgix": "2.0.5",
-        "verbb/super-table": "2.6.5",
-        "percipioglobal/craft-colour-swatches": "1.4.1.1"
+        "craftcms/aws-s3": "1.3.0",
+        "craftcms/cms": "3.7.20",
+        "craftcms/redactor": "2.8.8",
+        "fortrabbit/craft-copy": "1.0.7",
+        "hillholliday/craft-user-manual": "2.1.0",
+        "nystudio107/craft-seomatic": "3.4.17",
+        "percipioglobal/craft-colour-swatches": "1.4.2",
+        "putyourlightson/craft-sendgrid": "1.2.3",
+        "sebastianlenz/linkfield": "1.0.25",
+        "spicyweb/craft-neo": "2.11.17",
+        "superbig/craft3-imgix": "2.1.0",
+        "verbb/icon-picker": "1.1.12",
+        "verbb/smith": "1.1.14",
+        "verbb/super-table": "2.6.8",
+        "vlucas/phpdotenv": "^2.4.0"
     },
     "autoload": {
         "psr-4": {
