--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "devDependencies": {
         "@axe-core/webdriverjs": "^4.1.1",
         "autoprefixer": "^10.2.5",
-        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#next",
+        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#5.3.0",
         "chalk": "^4.1.1",
         "color": "^3.1.2",
         "eslint": "^7.2.0",
