--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Brightpack Settings - used in local development only
 ################################################
 
-APP_HOST="yourapp.test"
+APP_HOST="ms-craft.test"
 APP_URL="http://${APP_HOST}"
 
 ################################################
@@ -30,20 +30,20 @@ DB_PORT=""
 # Primary Site Settings (the only site in a single site install)
 ################################################
 
-PRIMARY_SITE_URL="http://${APP_HOST}"
+PRIMARY_SITE_URL="http://ms-craft.test"
 PRIMARY_SITE_NAME="MS Craft"
 
 ################################################
 # AWS Hosted Asset Volumes and CDN
 ################################################
 
-AWS_DEFAULT_REGION="us-east-1"
+AWS_S3_REGION="us-east-1"
 AWS_S3_ACCESS_KEY_ID=""
 AWS_S3_SECRET_ACCESS_KEY=""
 AWS_S3_BUCKET=""
 
-CLOUDFRONT_URL=""
-CLOUDFRONT_DISTRIBUTION_ID=""
+AWS_CLOUDFRONT_URL=""
+AWS_CLOUDFRONT_DISTRIBUTION_ID=""
 
 ################################################
 # IMGIX Settings (if used)
