--- a/composer.json
+++ b/composer.json
@@ -4,20 +4,19 @@
     "type": "project",
     "require": {
         "craftcms/aws-s3": "1.3.0",
-        "craftcms/cms": "3.7.20",
-        "craftcms/redactor": "2.8.8",
-        "fortrabbit/craft-copy": "1.0.7",
-        "hillholliday/craft-user-manual": "2.1.0",
-        "nystudio107/craft-seomatic": "3.4.17",
-        "percipioglobal/craft-colour-swatches": "1.4.2",
-        "putyourlightson/craft-sendgrid": "1.2.3",
+        "craftcms/cms": "3.7.43",
+        "craftcms/redactor": "2.10.8",
+        "fortrabbit/craft-copy": "1.2.1",
+        "nystudio107/craft-seomatic": "3.4.30",
+        "percipioglobal/craft-colour-swatches": "1.5.2",
+        "putyourlightson/craft-sendgrid": "1.3.1",
+        "roberskine/craft-user-manual": "2.1.2",
         "sebastianlenz/linkfield": "1.0.25",
-        "spicyweb/craft-embedded-assets": "2.9.0",
-        "spicyweb/craft-neo": "2.11.17",
+        "spicyweb/craft-embedded-assets": "2.10.7",
+        "spicyweb/craft-neo": "2.13.10",
         "superbig/craft3-imgix": "2.1.0",
         "verbb/icon-picker": "1.1.12",
-        "verbb/smith": "1.1.14",
-        "verbb/super-table": "^2.6",
+        "verbb/smith": "1.2.3",
         "vlucas/phpdotenv": "^2.4.0"
     },
     "autoload": {
@@ -27,7 +26,10 @@
     },
     "config": {
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "craftcms/plugin-installer": true
+        }
     },
     "scripts": {
         "post-create-project-cmd": [
