--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     },
     "devDependencies": {
         "@axe-core/webdriverjs": "^4.1.1",
-        "autoprefixer": "^10.2.5",
-        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#5.3.0",
+        "autoprefixer": "^10.4.2",
+        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#6.0.0",
         "chalk": "^4.1.1",
         "color": "^3.1.2",
         "eslint": "^7.2.0",
@@ -22,13 +22,14 @@
         "eslint-plugin-html": "^6.0.2",
         "eslint-plugin-svelte3": "^2.7.3",
         "eslint-plugin-vue": "^6.2.2",
-        "postcss": "^8.2.13",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.6",
         "postcss-functions": "^4.0.2",
-        "postcss-import": "^14.0.1",
-        "postcss-loader": "^5.2.0",
-        "postcss-preset-env": "^6.7.0",
+        "postcss-import": "^14.0.2",
+        "postcss-loader": "^6.2.1",
+        "postcss-preset-env": "^7.3.1",
         "selenium-webdriver": "^4.0.0-beta.3",
-        "tailwindcss": "^2.1.2",
+        "tailwindcss": "^3.0.19",
         "uvu": "^0.5.1"
     }
 }
