⬆️ upgrade to craft 4

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ APP_URL="http://${APP_HOST}"
 # Craft General Settings (environments are 'dev', 'staging', or 'production')
 ################################################
 
-ENVIRONMENT="dev"
-SECURITY_KEY=""
-APP_ID=""
+CRAFT_ENVIRONMENT="dev"
+CRAFT_SECURITY_KEY=""
+CRAFT_APP_ID=""
 
 ################################################
 # Primary Site Settings (the only site in a single site install)
@@ -24,14 +24,14 @@ PRIMARY_SITE_URL="http://ms-craft.test"
 # Database Settings
 ################################################
 
-DB_DRIVER="mysql"
-DB_SERVER="127.0.0.1"
-DB_USER="root"
-DB_PASSWORD=""
-DB_DATABASE=""
-DB_SCHEMA="public"
-DB_TABLE_PREFIX=""
-DB_PORT=""
+CRAFT_DB_DRIVER="mysql"
+CRAFT_DB_SERVER="127.0.0.1"
+CRAFT_DB_USER="root"
+CRAFT_DB_PASSWORD=""
+CRAFT_DB_DATABASE=""
+CRAFT_DB_SCHEMA="public"
+CRAFT_DB_TABLE_PREFIX=""
+CRAFT_DB_PORT=""
 
 ################################################
 # AWS Hosted Asset Volumes and CDN
