🚧 update to vitepack

--- a/package.json
+++ b/package.json
@@ -6,27 +6,21 @@
     "license": "UNLICENSED",
     "author": "Mostly Serious",
     "scripts": {
-        "dev": "webpack --mode=development --watch",
-        "build": "webpack --mode=production",
+        "dev": "vite",
+        "build": "vite build",
         "bootstrap": "bootstrap/script.sh",
         "test": "uvu tests"
     },
     "devDependencies": {
         "@axe-core/webdriverjs": "^4.1.1",
-        "autoprefixer": "^10.4.2",
-        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#6.0.1",
-        "chalk": "^4.1.1",
-        "color": "^3.1.2",
-        "eslint": "^7.2.0",
-        "eslint-plugin-html": "^6.0.2",
-        "eslint-plugin-svelte3": "^2.7.3",
-        "lodash": "^4.17.21",
-        "postcss": "^8.4.6",
+        "@mostlyserious/vitepack": "^1.1.0",
+        "@tailwindcss/typography": "^0.5.2",
+        "postcss": "^8.4.14",
         "postcss-functions": "^4.0.2",
-        "postcss-import": "^14.0.2",
-        "postcss-loader": "^6.2.1",
-        "postcss-preset-env": "^7.3.1",
+        "postcss-import": "^14.1.0",
+        "postcss-preset-env": "^7.7.2",
         "selenium-webdriver": "^4.0.0-beta.3",
+        "svelte": "^3.49.0",
         "tailwindcss": "^3.1.4",
         "uvu": "^0.5.1"
     }
