--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "project",
     "require": {
         "craftcms/aws-s3": "1.3.0",
-        "craftcms/cms": "3.7.47",
+        "craftcms/cms": "3.7.50",
         "craftcms/redactor": "2.10.10",
         "fortrabbit/craft-copy": "1.2.4",
         "hillholliday/craft-user-manual": "2.1.2",
-        "nystudio107/craft-seomatic": "3.4.36",
-        "percipioglobal/craft-colour-swatches": "1.6.0",
+        "nystudio107/craft-seomatic": "3.4.37",
+        "percipioglobal/craft-colour-swatches": "1.7.0",
         "putyourlightson/craft-sendgrid": "1.3.1",
         "sebastianlenz/linkfield": "1.0.25",
         "spicyweb/craft-embedded-assets": "2.11.3",
-        "spicyweb/craft-neo": "2.13.12",
+        "spicyweb/craft-neo": "2.13.15",
         "verbb/icon-picker": "1.1.13",
         "verbb/smith": "1.2.3",
         "vlucas/phpdotenv": "^2.4.0"
@@ -27,7 +27,9 @@
         "sort-packages": true,
         "optimize-autoloader": true,
         "allow-plugins": {
-            "craftcms/plugin-installer": true
+            "craftcms/plugin-installer": true,
+            "yiisoft/yii2-composer": true,
+            "fortrabbit/craft-auto-migrate": true
         }
     },
     "scripts": {
