--- a/package.json
+++ b/package.json
@@ -13,23 +13,21 @@
     },
     "devDependencies": {
         "@axe-core/webdriverjs": "^4.1.1",
+        "@mostlyserious/brightpack": "^6.1.0",
+        "@mostlyserious/tailwindcss-util": "^1.0.0",
         "autoprefixer": "^10.4.2",
-        "brightpack": "ssh://git@github.com:mostlyserious/brightpack.git#6.0.0",
-        "chalk": "^4.1.1",
-        "color": "^3.1.2",
         "eslint": "^7.2.0",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-html": "^6.0.2",
         "eslint-plugin-svelte3": "^2.7.3",
         "eslint-plugin-vue": "^6.2.2",
-        "lodash": "^4.17.21",
         "postcss": "^8.4.6",
         "postcss-functions": "^4.0.2",
         "postcss-import": "^14.0.2",
         "postcss-loader": "^6.2.1",
         "postcss-preset-env": "^7.3.1",
         "selenium-webdriver": "^4.0.0-beta.3",
-        "tailwindcss": "^3.0.19",
+        "tailwindcss": "^3.1.6",
         "uvu": "^0.5.1"
     }
 }
