➕ add async queue plugin by default

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,8 @@ SENDGRID_API_KEY=""
 # Other Integrations (if required) 
 ################################################
 
+ASYNC_QUEUE_CONCURRENCY=1
+
 # STRIPE_PUBLIC=""
 # STRIPE_SECRET=""
 
