--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "allow-plugins": {
             "craftcms/plugin-installer": true,
             "yiisoft/yii2-composer": true,
-            "fortrabbit/craft-auto-migrate": true
+            "fortrabbit/craft-auto-migrate": true,
+            "treeware/plant": true
         }
     },
     "scripts": {
