--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "project",
     "require": {
         "craftcms/aws-s3": "2.0.1",
-        "craftcms/cms": "4.1.3",
+        "craftcms/cms": "4.2.4",
         "craftcms/redactor": "3.0.2",
         "fortrabbit/craft-copy": "2.1.1",
         "hillholliday/craft-user-manual": "4.0.0",
-        "nystudio107/craft-seomatic": "4.0.6",
-        "percipioglobal/craft-colour-swatches": "4.1.0",
+        "nystudio107/craft-seomatic": "4.0.7",
+        "percipioglobal/craft-colour-swatches": "4.2.0.1",
         "putyourlightson/craft-sendgrid": "2.0.1",
-        "sebastianlenz/linkfield": "2.1.3-rc",
-        "spicyweb/craft-embedded-assets": "3.0.4",
-        "spicyweb/craft-neo": "3.1.7",
+        "sebastianlenz/linkfield": "2.1.4",
+        "spicyweb/craft-embedded-assets": "3.0.5",
+        "spicyweb/craft-neo": "3.3.8",
         "verbb/icon-picker": "2.0.0-beta.5",
         "verbb/smith": "2.0.0",
         "vlucas/phpdotenv": "^5.4.0"
