--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
             "@php -r \"unlink('composer.json');\"",
             "@php -r \"rename('composer.json.default', 'composer.json');\"",
             "@composer dump-autoload -o",
+            "@php craft setup/security-key",
             "@php craft setup/welcome"
         ]
     }
