--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
             "@php -r \"copy('.env.example', '.env');\"",
             "@php -r \"unlink('composer.json');\"",
             "@php -r \"rename('composer.json.default', 'composer.json');\"",
-            "@composer dump-autoload -o"
+            "@composer dump-autoload -o",
+            "@php craft setup/security-key"
         ]
     }
 }
