Add non-blocking web font loading

--- a/.env.example
+++ b/.env.example
@@ -46,12 +46,19 @@ AWS_CLOUDFRONT_URL=""
 AWS_CLOUDFRONT_DISTRIBUTION_ID=""
 
 ################################################
-# IMGIX Settings (if used)
+# IMGIX Settings
 ################################################
 
 # IMGIX_HOST=""
 # IMGIX_URL="https://${IMGIX_HOST}"
 # IMGIX_API_KEY=""
+
+################################################
+# Web Fonts (if used)
+################################################
+
+# ADOBE_FONTS_URL=""
+# GOOGLE_FONTS_URL=""
 
 ################################################
 # System Email Settings
