--- a/.env.example
+++ b/.env.example
@@ -64,8 +64,9 @@ AWS_CLOUDFRONT_DISTRIBUTION_ID=""
 # System Email Settings
 ################################################
 
-SYSTEM_EMAIL_ADDRESS=""
 SYSTEM_EMAIL_NAME="MS Craft"
+SYSTEM_EMAIL_ADDRESS="engineering-logs@mostlyserious.io"
+TEST_EMAIL_ADDRESS="engineering-logs@mostlyserious.io"
 SENDGRID_API_KEY=""
 
 ################################################
@@ -87,5 +88,5 @@ ASYNC_QUEUE_CONCURRENCY=1
 # Mostly Serious QA and Support
 ################################################
 
-MARKERIO_DESTINATION=""
+MARKERIO_PROJECT=""
 SENTRY_DSN=""
