--- a/web/static/manifest.json
+++ b/web/static/manifest.json
@@ -1,16 +1,24 @@
 {
   "src/js/main.js": {
-    "file": "assets/main.80ffcbfa.js",
+    "file": "assets/main.6bb66536.js",
     "src": "src/js/main.js",
     "isEntry": true,
     "dynamicImports": [
       "src/js/modules/intro.js",
       "src/js/modules/property.js",
       "src/js/modules/toggle.js",
-      "_svelte.55aec5c8.js"
+      "_svelte.118a9a7f.js"
     ],
     "css": [
-      "assets/main.90a1db35.css"
+      "assets/main.8b044219.css"
+    ]
+  },
+  "src/js/cp.js": {
+    "file": "assets/cp.25187014.js",
+    "src": "src/js/cp.js",
+    "isEntry": true,
+    "css": [
+      "assets/cp.1814c7df.css"
     ]
   },
   "src/js/modules/intro.js": {
@@ -28,8 +36,8 @@
     "src": "src/js/modules/toggle.js",
     "isDynamicEntry": true
   },
-  "_svelte.55aec5c8.js": {
-    "file": "assets/svelte.55aec5c8.js",
+  "_svelte.118a9a7f.js": {
+    "file": "assets/svelte.118a9a7f.js",
     "isDynamicEntry": true,
     "imports": [
       "src/js/main.js"
@@ -39,16 +47,20 @@
     ]
   },
   "src/js/store.js": {
-    "file": "assets/store.62d2822d.js",
+    "file": "assets/store.c3a24f54.js",
     "src": "src/js/store.js",
     "isDynamicEntry": true,
     "imports": [
-      "_svelte.55aec5c8.js",
+      "_svelte.118a9a7f.js",
       "src/js/main.js"
     ]
   },
+  "src/js/cp.css": {
+    "file": "assets/cp.1814c7df.css",
+    "src": "src/js/cp.css"
+  },
   "src/js/main.css": {
-    "file": "assets/main.90a1db35.css",
+    "file": "assets/main.8b044219.css",
     "src": "src/js/main.css"
   }
 }
